# base64-ng

./: .gitignore  2.0.0-release-plan.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  release-crates.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  security-audit.yml
crates/base64-ng-bytes/: Cargo.toml  README.md
crates/base64-ng-bytes/src/: lib.rs
crates/base64-ng-bytes/tests/: bytes.rs
crates/base64-ng-derive/: Cargo.toml  README.md
crates/base64-ng-derive/src/: lib.rs
crates/base64-ng-derive/tests/: base64_secret.rs
crates/base64-ng-sanitization/: Cargo.toml  README.md
crates/base64-ng-sanitization/src/: compare.rs  compare_tests.rs  decode_impl.rs  error.rs  lib.rs  locked.rs  locked_tests.rs  locked_vec.rs  protected_decode.rs  protected_tests.rs  tests.rs
crates/base64-ng-serde/: Cargo.toml  README.md
crates/base64-ng-serde/src/: lib.rs
crates/base64-ng-serde/tests/: serde.rs
crates/base64-ng-subtle/: Cargo.toml  README.md
crates/base64-ng-subtle/src/: lib.rs
crates/base64-ng-tokio/: Cargo.toml  README.md
crates/base64-ng-tokio/src/: decoder_writer.rs  encoder_writer.rs  lib.rs  queue.rs  readers.rs
crates/base64-ng-tokio/tests/: tokio.rs  tokio_writer.rs
docs/: API_AUDIT.md  ASYNC.md  BENCHMARKS.md  BIG_ENDIAN_QEMU_REVIEW.md  CONSTANT_TIME.md  CRATE_VERSION_MATRIX.md  CT_ASM_REVIEW.md  DEPENDENCIES.md  DUDECT.md  FUZZING.md  INVARIANTS.md  KANI.md  MIGRATION.md  PANIC_POLICY.md  PLAN.md  RELEASE.md  RELEASE_EVIDENCE.md  RISCV_QEMU_REVIEW.md  SECURITY_CONTROLS.md  SIMD.md  SIMD_ACTIVATION_CHECKLIST.md  SIMD_ADMISSION.md  SIMD_ENCODE_ADMISSION_DRAFT.md  SIMD_NON_STANDARD_SURFACE_REVIEW.md  TRUST.md  UNSAFE.md  WASM_SIMD128_RUNTIME_REVIEW.md
dudect/: Cargo.toml  deny.toml
dudect/src/: main.rs
fuzz/: Cargo.toml  deny.toml
fuzz/fuzz_targets/: decode.rs  differential.rs  in_place.rs  profiles.rs  stream_chunks.rs
kani/: README.md
perf/: Cargo.toml  deny.toml
perf/src/: main.rs
portability/migration_smoke/src/: lib.rs
portability/no_alloc_smoke/src/: lib.rs
release-notes/: RELEASE_NOTES_0.1.0.md  RELEASE_NOTES_0.10.0.md  RELEASE_NOTES_0.11.0.md  RELEASE_NOTES_0.12.0.md  RELEASE_NOTES_0.2.0.md  RELEASE_NOTES_0.3.0.md  RELEASE_NOTES_0.4.0.md  RELEASE_NOTES_0.4.1.md  RELEASE_NOTES_0.5.0.md  RELEASE_NOTES_0.6.0.md  RELEASE_NOTES_0.7.0.md  RELEASE_NOTES_0.8.0.md  RELEASE_NOTES_0.9.0.md  RELEASE_NOTES_1.0.0.md  RELEASE_NOTES_1.0.1.md  RELEASE_NOTES_1.0.10.md  RELEASE_NOTES_1.0.2.md  RELEASE_NOTES_1.0.3.md  RELEASE_NOTES_1.0.4.md  RELEASE_NOTES_1.0.5.md  RELEASE_NOTES_1.0.6.md  RELEASE_NOTES_1.0.7.md  RELEASE_NOTES_1.0.8.md  RELEASE_NOTES_1.0.9.md  RELEASE_NOTES_1.1.0.md  RELEASE_NOTES_1.1.1.md  RELEASE_NOTES_1.1.2.md  RELEASE_NOTES_1.1.3.md  RELEASE_NOTES_1.1.4.md  RELEASE_NOTES_1.1.5.md  RELEASE_NOTES_1.1.6.md  RELEASE_NOTES_1.2.0.md  RELEASE_NOTES_1.2.1.md  RELEASE_NOTES_1.2.2.md  RELEASE_NOTES_1.2.3.md  RELEASE_NOTES_1.3.0.md  RELEASE_NOTES_1.3.1.md  RELEASE_NOTES_1.3.2.md  RELEASE_NOTES_1.3.3.md  RELEASE_NOTES_1.3.4.md  (+5 more)
scripts/: cargo-deny-check.sh  check_aarch64_linux.sh  check_backend_evidence.sh  check_big_endian_intrinsics_status.sh  check_big_endian_qemu.sh  check_companion_crates.sh  check_dudect.sh  check_fuzz.sh  check_fuzz_corpus.sh  check_kani.sh  check_kani_advanced.sh  check_macos.sh  check_migration_smoke.sh  check_miri.sh  check_no_alloc_smoke.sh  check_perf.sh  check_reserved_features.sh  check_riscv_intrinsics_status.sh  check_riscv_qemu.sh  check_scheduled_advisories.sh  check_simd_feature_bundles.sh  check_targets.sh  check_wasm_browser_dispatch.sh  check_wasm_browser_firefox_dispatch.sh  check_wasm_browser_safari_dispatch.sh  check_wasm_runtime_dispatch.sh  check_wasm_wipe_policy.sh  checks.sh  ci_install_rust.sh  generate-sbom.sh  generate_ct_asm_evidence.sh  generate_release_history.py  generate_simd_asm_evidence.sh  generate_wasm_simd_evidence.sh  release_crates.py  reproducible_build_check.sh  stable_release_gate.sh  test-release-crates.py  test-release-readiness.sh  validate-api-audit.sh  (+16 more)
security/pentest/: README.md  v0.1.0.md  v0.10.0.md  v0.11.0.md  v0.12.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.4.1.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v0.8.0.md  v0.9.0.md  v1.0.0.md  v1.0.1.md  v1.0.10.md  v1.0.2.md  v1.0.3.md  v1.0.4.md  v1.0.5.md  v1.0.6.md  v1.0.7.md  v1.0.8.md  v1.0.9.md  v1.1.0.md  v1.1.1.md  v1.1.2.md  v1.1.3.md  v1.1.4.md  v1.1.5.md  v1.1.6.md  v1.2.0.md  v1.2.1.md  v1.2.2.md  v1.2.3.md  v1.3.0.md  v1.3.1.md  v1.3.2.md  v1.3.4.md  (+5 more)
src/: alphabet.rs  buffers.rs  cleanup.rs  ct.rs  decode_backend.rs  decode_surface_tests.rs  encode_backend.rs  encode_surface_tests.rs  errors.rs  kani_proofs.rs  length.rs  lib.rs  non_standard_surface_tests.rs  profiles.rs  runtime.rs  scalar.rs  scalar_encode_in_place.rs  simd.rs  stream.rs  tests.rs  wrap.rs
src/buffers/: decoded.rs  encoded.rs  mod.rs  secret.rs  secret_conversions.rs
src/ct/: decode.rs  equality.rs  mod.rs  padded.rs  unpadded.rs
src/engine/: decode.rs  decode_const.rs  decode_in_place.rs  encode.rs  encode_in_place.rs  mod.rs  stream.rs  validate.rs
src/runtime/: mod.rs  report.rs
src/simd/: decode_helpers.rs  mod.rs  neon.rs  neon_decode_tests.rs  tests.rs  wasm.rs  x86.rs  x86_decode_tests.rs
src/simd/x86/: cleanup.rs  decode.rs  mod.rs
src/stream/: common.rs  decoder.rs  decoder_reader.rs  encoder.rs  encoder_reader.rs  mod.rs  queue.rs
tests/: rfc4648.rs  simd_decode_dispatch.rs  stream.rs
