[package]
name = "base64-ng"
version = "1.0.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
description = "no_std-first Base64 encoding and decoding with strict APIs and a security-heavy release process"
repository = "https://github.com/valkyoth/base64-ng"
homepage = "https://github.com/valkyoth/base64-ng"
documentation = "https://docs.rs/base64-ng"
readme = "README.md"
keywords = ["base64", "encoding", "no-std", "simd"]
categories = ["encoding", "no-std"]
include = [
    "src/**",
    "tests/**",
    "benches/**",
    "docs/**",
    "portability/no_alloc_smoke/src/**",
    "portability/migration_smoke/src/**",
    "scripts/**",
    "Cargo.toml",
    "rust-toolchain.toml",
    "deny.toml",
    "README.md",
    "CONTRIBUTING.md",
    "CHANGELOG.md",
    "SECURITY.md",
    "LICENSE-*",
]

[features]
default = ["alloc", "std"]
alloc = []
std = ["alloc"]
simd = []
stream = ["std"]
allow-wasm32-best-effort-wipe = []
allow-compiler-fence-only-wipe = []
# Placeholder for future async Tokio integration; currently no-op,
# dependency-free, and enforced by scripts/check_reserved_features.sh.
tokio = []
kani = []
fuzzing = []

[dependencies]

[dev-dependencies]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(kani)", "cfg(miri)"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
