[package]
name = "base64-ng-sanitization"
version = "1.3.2"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
description = "Optional sanitization integration helpers for base64-ng"
repository = "https://github.com/valkyoth/base64-ng"
homepage = "https://github.com/valkyoth/base64-ng"
documentation = "https://docs.rs/base64-ng-sanitization"
readme = "README.md"
keywords = ["base64", "secrets", "zeroize", "no-std"]
categories = ["encoding", "no-std", "cryptography"]
include = [
    "Cargo.toml",
    "README.md",
    "src/**",
    "tests/**",
]

[features]
default = []
alloc = ["base64-ng/alloc", "sanitization/alloc"]
std = ["alloc", "base64-ng/std", "sanitization/std"]
asm-compare = ["sanitization/asm-compare"]
memory-lock = ["sanitization/memory-lock"]
canary-check = ["memory-lock", "sanitization/canary-check"]
random-canary = ["canary-check", "sanitization/random-canary"]
high-assurance = ["memory-lock", "canary-check", "random-canary"]
strict-ct = ["sanitization/strict-ct"]
wasm-compat = ["sanitization/wasm-compat"]

[dependencies]
base64-ng = { version = "1.3.2", path = "../..", default-features = false }
sanitization = { version = "=1.2.2", default-features = false }

[lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(miri)",
] }

[lints.clippy]
all = "deny"
pedantic = "deny"

[package.metadata.docs.rs]
all-features = true
