[package]
name = "base64-ng-serde"
version = "1.2.1"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
description = "Optional serde wrappers for base64-ng"
repository = "https://github.com/valkyoth/base64-ng"
homepage = "https://github.com/valkyoth/base64-ng"
documentation = "https://docs.rs/base64-ng-serde"
readme = "README.md"
keywords = ["base64", "serde", "encoding", "no-std"]
categories = ["encoding", "no-std"]
include = [
    "src/**",
    "tests/**",
    "Cargo.toml",
    "README.md",
]

[features]
default = ["alloc"]
alloc = ["base64-ng/alloc", "serde/alloc"]
std = ["alloc", "base64-ng/std", "serde/std"]

[dependencies]
base64-ng = { version = "1.2.1", path = "../..", default-features = false }
serde = { version = "1.0.228", default-features = false }

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"], default-features = false }
serde_json = "1.0.150"

[lints.rust]
unsafe_code = "deny"
missing_docs = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"

[package.metadata.docs.rs]
all-features = true
