[package]
name = "base64-ng-subtle"
version = "1.3.5"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
description = "Optional subtle::ConstantTimeEq helpers for base64-ng buffers"
repository = "https://github.com/valkyoth/base64-ng"
homepage = "https://github.com/valkyoth/base64-ng"
documentation = "https://docs.rs/base64-ng-subtle"
readme = "README.md"
keywords = ["base64", "constant-time", "crypto", "encoding"]
categories = ["cryptography", "encoding", "no-std"]
include = [
    "src/**",
    "tests/**",
    "Cargo.toml",
    "README.md",
]

[features]
default = ["alloc"]
alloc = ["base64-ng/alloc"]
std = ["alloc", "base64-ng/std", "subtle/std"]

[dependencies]
base64-ng = { version = "1.3.5", path = "../..", default-features = false }
subtle = { version = "2.6.1", default-features = false }

[lints.rust]
unsafe_code = "deny"
missing_docs = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"

[package.metadata.docs.rs]
all-features = true
